--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
 <head>
     <title><%= title %></title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
-    <script type="text/javascript" src="javascripts/slyceApp.js"></script>
+    <script type="text/javascript" src="javascripts/qaApp.js"></script>
 </head>
-<body ng-app="slyce_app" ng-controller="QASessionCntrl">
+<body ng-app="qa_app" ng-controller="QASessionCntrl">
 <h1 align="center">Welcome to <%= title %></h1>
 <form target="_blank">
     <fieldset>
